crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__cf__tests__compile_assert.snap
---
source: crates/tracel-mlir-rs/src/dialect/cf.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %true = arith.constant true
    cf.assert %true, "assert message"
    return
  }
}
